# hearth

./: .gitattributes  .gitignore  CONTRIBUTING.md  DESIGN.md  LICENSE  PRODUCT.md  README.md  package-lock.json  package.json  tsconfig.base.json  vitest.config.ts
.github/workflows/: ci.yml  release.yml
.superpowers/sdd/: waveL2-FINAL-REVIEW.md
.superpowers/sdd/waveL/: AUDITOR-COMMON.md  FINAL-REVIEW.md  LEDGER.md  PARITY.md
apps/editor/: index.html  package.json  tsconfig.json  vite.config.ts
apps/editor/buildResources/: entitlements.mac.plist
apps/editor/electron/: appMenu.ts  main.ts  preload.cjs  updater.ts  updaterPolicy.ts
apps/editor/scripts/: afterAllArtifactBuild.cjs  afterPack.cjs  assemble-app.mjs  build-electron.mjs  format-inline.mjs  lua-wasm-inline.mjs  smoke-tools.mjs
apps/editor/server/: agentSetup.ts  (+8 more)
apps/editor/src-tauri/: Cargo.toml  README.md  tauri.conf.json
apps/editor/src-tauri/src/: main.rs
assets/brand/: PHILOSOPHY.md
docs/: agent-panel.md  agents.md  architecture.md  assets.md  cli.md  components.md  connect-any-agent.md  connect-claude-code.md  connect-codex.md  connect-hermes.md  connect-opencode.md  desktop-app.md  editor.md  effects.md  export.md  game-feel.md  input.md  mcp.md  performance.md  playtesting.md  prefabs.md  project-format.md  quickstart.md  releasing.md  roadmap.md  scripting.md  ship-desktop.md  ship-web-hosting.md  shipping-to-itch.md  ui.md
docs/releases/: v1.2.1.md
scripts/: check-release.mjs  check-release.test.mjs  sync-agent-skill.mjs
skills/hearth/: SKILL.md
skills/hearth-craft/: SKILL.md
(+268 files in other folders)
