[package]
name = "hearth-editor"
version = "0.1.0"
description = "Hearth desktop editor shell"
authors = ["Hearth contributors"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "hearth-editor"
path = "src/main.rs"
